# zk-ecdsa-attest

./: Cargo.toml  README.md
benches/: proof_benchmark.rs
src/: commitments.rs  lib.rs  main.rs  prover.rs  transcript.rs  verifier.rs
tests/: integration_test.rs
