[package]
name = "zk-ecdsa-attest"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "ecdsa", "sha256"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0" # Optional: Makes error handling pro-level (or just use Strings for now)

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_benchmark"
harness = false